<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/iv_title"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/pair_block05"
        android:contentDescription="@string/cd_image" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/iv_title"
        android:layout_alignBottom="@id/iv_title"
        android:paddingLeft="16dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textColor="@android:color/white"/>

    <View
	      android:id="@+id/tv_line"
		  android:layout_width="wrap_content"
          android:layout_height="1dp"
          android:layout_below="@id/tv_title"
          android:layout_alignLeft="@id/iv_title"
          android:layout_alignRight="@id/iv_title"
          android:background="@android:color/white" />
    
    <RelativeLayout
        android:id="@+id/rl_body2"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@id/tv_line"
        android:layout_alignLeft="@id/tv_line"
        android:layout_alignRight="@id/tv_line"
        android:padding="8dp"
        android:background="@drawable/pair_block04">

        <Button
            android:id="@+id/btn_confirm"
	        android:layout_width="wrap_content"
	        android:layout_height="40dp"
	        android:layout_alignParentBottom="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="8dp"
	        android:gravity="center"
	        android:text="@string/ok"
	        android:textColor="@android:color/black"
	        android:textSize="14sp"        
	        android:background="@drawable/button_pair_cancel" />
        
        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_above="@id/btn_confirm"
            android:layout_centerHorizontal="true"
            android:text="aaa"
            android:textSize="14sp"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</RelativeLayout>